added vote counter

--- a/leaderboard.css
+++ b/leaderboard.css
@@ -74,3 +74,10 @@ input.newPlayer:focus {
 input.clear {
     margin-top: 15px;
 }
+
+.votesLeft {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    font-size: 30px;
+}
